<resources>
    <string name="app_name">Let\'s Draw Together</string>
    <string name="title_activity_creator">CreatorActivity</string>

    <!-- used in MainActivity -->
    <string name="move_to_creator_activity">Move to CreatorActivity</string>

    <!-- used in CreatorActivity -->
    <string name="cant_support_spen_sdk">This device can\'t support Spen SDK.</string>
    <string name="cant_initialize_spen_sdk">Can\'t initialize Spen SDK.</string>
    <string name="cant_create_surface_view">Can\'t create SpenSurfaceView.</string>
    <string name="cant_create_note_doc">Can\'t create SPenNoteDoc.</string>
    <string name="device_doesnt_support_spen">Device doesn\'t support Spen.</string>
    <string name="preset_is_full">Maximum of pens is %s.</string>
    <string name="is_already_exist_same_pen">Already exists.</string>
    <string name="cant_upload_file">업로드에 실패했습니다.</string>
    <string name="upload_complete">업로드를 완료하였습니다.</string>
    <string name="input_title">제목을 입력해주세요.</string>

    <string name="edit">편집</string>
    <string name="done">완료</string>
    <string name="pen">Pen</string>

    <!-- name of SharedPreference -->
    <string name="prefname_favorite_pen">sharedpref_favorite_pen</string>
    <string name="prefattr_favorite_pen_size">favorite_pen_size</string>

    <!-- pen names in used Pen SDK-->
    <string name="pencil_path">com.samsung.android.sdk.pen.pen.preload.Pencil</string>
    <string name="ink_pen_path">com.samsung.android.sdk.pen.pen.preload.InkPen</string>
    <string name="marker_path">com.samsung.android.sdk.pen.pen.preload.Marker</string>
    <string name="chinese_brush_path">com.samsung.android.sdk.pen.pen.preload.ChineseBrush</string>
    <string name="beautify_path">com.samsung.android.sdk.pen.pen.preload.Beautify</string>
    <string name="brush_path">com.samsung.android.sdk.pen.pen.preload.Brush</string>
    <string name="magic_pen_path">com.samsung.android.sdk.pen.pen.preload.MagicPen</string>
    <string name="fountain_pen_path">com.samsung.android.sdk.pen.pen.preload.FountainPen</string>
    <string name="oblique_pen_path">com.samsung.android.sdk.pen.pen.preload.ObliquePen</string>

    <!-- contentDescription -->
    <string name="cd_eraser">지우개</string>
    <string name="cd_pen">펜</string>
    <string name="cd_undo">실행 취소</string>
    <string name="cd_redo">다시 실행</string>
    <string name="cd_save">저장</string>
    <string name="cd_show_preset">프리셋 보기</string>
    <string name="cd_edit_preset">프리셋 편집</string>
    <string name="cd_add_preset">프리셋 추가</string>
    <string name="cd_replay">리플레이</string>
    <string name="cd_save_and_make_next_step">중간 저장 후 다음 단계 생성</string>
    <string name="cd_load_next_step">다음 단계 불러오기</string>
    <string name="cd_creator_mode">창작 모드</string>
    <string name="cd_imitator_mode">따라 그리는 모드</string>
    <string name="cd_invite_to_friend">친구 초대하기</string>
    <string name="cd_market">마켓</string>

    <!-- Dialog -->
    <string name="dlg_delete_all">모두 삭제</string>
    <string name="dlg_delete_all_description">현재까지의 내용을 모두 지우시겠습니까?</string>
    <string name="dlg_yes">네</string>
    <string name="dlg_no">아니오</string>
    <string name="dlg_next_step">다음 단계로 이동</string>
    <string name="dlg_next_step_description">현재까지의 내용을 저장하고 다음 단계를 작성하시겠습니까? 다음 단계로 넘어가면 이전 단계로 돌아갈 수 없습니다.</string>
    <string name="dlg_save_and_upload_description">현재까지의 내용을 저장하고 마켓에 업로드하시겠습니까?</string>
    <string name="draw_data_isnt_exist">업로드할 작업물이 없습니다.</string>
    <string name="dlg_end">종료</string>
    <string name="dlg_confirm_close_app">정말로 Let\'s Draw Together를 종료하시겠습니까?</string>
    <string name="dlg_confirm_move_to_main">저장하지 않고 메인 메뉴로 이동하시겠습니까?</string>
    <string name="dlg_download">내려받기</string>
    <string name="dlg_confirm_download">이 작품을 내려받으시겠습니까?</string>
    <string name="dlg_choice_artwork">작품 선택</string>
    <string name="dlg_move_to_main">메인 메뉴로 이동</string>

    <!-- used in ImitatorActivity -->
    <string name="cant_move_next_step">다음 단계로 넘어갈 수 없습니다.</string>
    <string name="cant_create_img">이미지로 저장하는 데 실패했습니다.</string>
    <string name="notify_final_step">마지막 단계입니다.</string>
    <string name="save_complete">저장을 완료하였습니다.</string>

    <!-- used in ArtworkChoiceActivity -->
    <string name="cant_get_artwork_list">서버에서 작품 리스트들을 가져올 수 없습니다.</string>
    <string name="download_completed">다운로드가 완료되었습니다.</string>
    <string name="cant_download_file">파일을 다운로드할 수 없습니다.</string>
    <string name="stroke_data_path">stroke_path</string>
    <string name="dlg_confirm_save_to_picture">현재까지의 작품을 이미지로 저장하시겠습니까?\n저장하시려면 하단에 파일명을 입력해주세요.</string>
    <string name="dlg_confirm_choice_artwork">이 작품을 그리시겠습니까?</string>
    <string name="cant_save_local">저장에 실패하였습니다.</string>
    <string name="cant_connect_server">서버에 접속할 수 없습니다.</string>

</resources>
