<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_no_margin"
    android:paddingLeft="@dimen/activity_horizontal_no_margin"
    android:paddingRight="@dimen/activity_horizontal_no_margin"
    android:paddingTop="@dimen/activity_vertical_no_margin"
    tools:context=".ui.CreatorActivity">

    <LinearLayout
        android:id="@+id/draw_tool_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- buttons -->
        <ImageButton
            android:id="@+id/pen_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_pen"
            android:layout_margin="1dip"
            android:contentDescription="@string/cd_pen"
            />

        <ImageButton
            android:id="@+id/eraser_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_eraser"
            android:layout_margin="1dip"
            android:contentDescription="@string/cd_eraser"
            />

        <ImageButton
            android:id="@+id/undo_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_undo"
            android:layout_margin="1dip"
            android:contentDescription="@string/cd_undo"
            />
        <ImageButton
            android:id="@+id/redo_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_redo"
            android:layout_margin="1dip"
            android:contentDescription="@string/cd_redo"
            />
        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_save"
            android:layout_margin="1dip"
            android:contentDescription="@string/cd_save"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/spen_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222222">

        <RelativeLayout
            android:id="@+id/spen_view_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            />

        <ImageButton
            android:id="@+id/show_preset_btn"
            android:layout_width="34dip"
            android:layout_height="34dip"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:background="@drawable/circle_btn"
            android:scaleType="fitXY"
            android:src="@drawable/circle_btn_favorite_pen"
            android:contentDescription="@string/cd_show_preset"
            />

        <ImageButton
            android:id="@+id/next_step_btn"
            android:layout_width="34dip"
            android:layout_height="34dip"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/circle_btn"
            android:scaleType="fitXY"
            android:src="@drawable/circle_btn_next_step"
            android:contentDescription="@string/cd_save_and_make_next_step"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:paddingTop="10dip">

            <Button
                android:id="@+id/edit_preset_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginRight="19dip"
                android:layout_marginBottom="5dip"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/presetBtnColor"
                android:textSize="14dip"
                android:visibility="gone"
                android:contentDescription="@string/cd_edit_preset"
                />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/presetBgColor"
                >

                <LinearLayout
                    android:id="@+id/preset_layout"
                    android:layout_width="match_parent"
                    android:layout_height="90dip"
                    android:layout_gravity="bottom"
                    android:paddingLeft="14dip"
                    android:visibility="gone"
                    >

                    <ImageButton
                        android:id="@+id/add_preset_btn"
                        android:layout_width="28dip"
                        android:layout_height="28dip"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="9dip"
                        android:layout_marginRight="12dip"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/add_favorite_pen"
                        android:contentDescription="@string/cd_add_preset"
                        />

                </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>