<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="120dp"
    android:paddingLeft="@dimen/activity_horizontal_no_margin"
    android:paddingRight="@dimen/activity_horizontal_no_margin"
    android:paddingTop="100dp"
    tools:context=".ui.MainActivity"
    android:background="@drawable/bg_line"
    android:gravity="center_vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:paddingTop="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        >
        <ImageButton
            android:id="@+id/creator_img"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/cd_creator_mode"
            android:src="@drawable/drawing" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        >

        <ImageButton
            android:id="@+id/imitator_img"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/cd_imitator_mode"
            android:src="@drawable/drawing_pink" />

    </LinearLayout>


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:paddingBottom="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        >
        <ImageButton
            android:id="@+id/send_img"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/cd_invite_to_friend"
            android:src="@drawable/send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        >
        <ImageButton
            android:id="@+id/market_img"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/cd_market"
            android:src="@drawable/market2" />
    </LinearLayout>

</LinearLayout>

<!--
<Button
    android:id="@+id/btn_move_to_creator_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/move_to_creator_activity"
    android:onClick="onMoveToCreatorActivity"
    />
    -->

<!--
<Button
    android:id="@+id/BtnOption"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Option" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/BtnSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Sign Up" />

    <Button
        android:id="@+id/BtnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Log In" />
</LinearLayout> -->
</LinearLayout>

